--- a/apps/task-service/package.json
+++ b/apps/task-service/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "reflect-metadata": "^0.2.2",
+    "@nestjs/microservices": "^11.1.5",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
