--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@task-mgmt/database": "workspace:*",
+    "drizzle-orm": "^0.44.4",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
