--- a/apps/time-tracking-service/package.json
+++ b/apps/time-tracking-service/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
     "@nestjs/microservices": "^11.1.5",
+    "@nestjs/platform-express": "^11.0.1",
+    "@task-mgmt/database": "workspace:*",
+    "drizzle-orm": "^0.44.4",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
