--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -15,7 +15,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nestjs/common": "^11.1.5",
     "drizzle-orm": "^0.44.4",
+    "pg": "^8.16.3",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
