--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -22,13 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^11.0.1",
     "@task-mgmt/database": "workspace:*",
     "drizzle-orm": "^0.44.4",
+    "neverthrow": "^8.2.0",
     "reflect-metadata": "^0.2.2",
-    "@nestjs/config": "^4.0.2",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
@@ -49,7 +50,7 @@
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
