--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -27,13 +27,14 @@
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
-    "@task-mgmt/database": "workspace:*",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "drizzle-orm": "^0.44.4",
     "neverthrow": "^8.2.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "@task-mgmt/database": "workspace:*",
+    "@task-mgmt/shared-config": "workspace:*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
