--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@task-mgmt/user-service",
+  "name": "@task-mgmt/auth-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
