--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -27,11 +27,13 @@
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^11.0.1",
     "@task-mgmt/database": "workspace:*",
+    "@task-mgmt/shared-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.10",
     "drizzle-orm": "^0.44.4",
+    "jsonwebtoken": "^9.0.2",
     "neverthrow": "^8.2.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
-    "@task-mgmt/shared-config": "workspace:*"
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
