--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -30,6 +30,8 @@
     "@task-mgmt/shared-config": "workspace:*",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "drizzle-orm": "^0.44.4",
     "neverthrow": "^8.2.0",
     "reflect-metadata": "^0.2.2",
