--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -21,13 +21,19 @@
     "postgres": "^3.4.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "prettier": "^3.4.2",
     "ts-jest": "^29.4.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.39.0"
   },
   "exports": {
     ".": {
