--- a/packages/shared-config/package.json
+++ b/packages/shared-config/package.json
@@ -12,8 +12,14 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@types/node": "^22.10.7",
     "eslint": "^9.18.0",
-    "typescript": "^5.7.3"
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.0.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.39.0"
   }
 }
