--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.2.1",
     "@types/pg": "^8.11.10",
+    "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.0.1",
