--- a/packages/mail/package.json
+++ b/packages/mail/package.json
@@ -11,7 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nestjs/common": "^11.1.6"
+    "@nestjs/common": "^11.1.6",
+    "@types/nodemailer": "^6.4.17",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
