--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   mailpit:
     image: axllent/mailpit
-    container_name: mailpit
+    container_name: task-manager-mailpit
     restart: unless-stopped
     volumes:
       - ./data:/data
