feat: enhance email verification and mail service; add environment variables for mail configuration, improve error handling, and update flowcharts

--- a/apps/user-service/.env.example
+++ b/apps/user-service/.env.example
@@ -1,3 +1,4 @@
+# database
 DB_HOST="localhost"
 DB_PORT="5432"
 DB_USER="postgres"
@@ -5,3 +6,9 @@ DB_PASSWORD="postgres"
 DB_NAME="task-management"
 
 FRONTEND_URL="http://localhost:3000"
+
+# mail
+MAIL_HOST="smtp.ethereal.email"
+MAIL_PORT=587
+MAIL_USER="dustin.bechtelar21@ethereal.email"
+MAIL_PASS="aX8cue9qqNDsBNxyyv"
