fix: update SMTP configuration in environment file; correct flowchart descriptions and improve mail service initialization

--- a/apps/user-service/.env.example
+++ b/apps/user-service/.env.example
@@ -7,8 +7,8 @@ DB_NAME="task-management"
 
 FRONTEND_URL="http://localhost:3000"
 
-# mail
-MAIL_HOST="smtp.ethereal.email"
+# mail - Configure your SMTP provider credentials
+MAIL_HOST="your-smtp-host.com"
 MAIL_PORT=587
-MAIL_USER="dustin.bechtelar21@ethereal.email"
-MAIL_PASS="aX8cue9qqNDsBNxyyv"
+MAIL_USER="your-email@example.com"
+MAIL_PASS="your-email-password"
