fix: update SMTP configuration in environment file; refactor mail service to use provided credentials

--- a/apps/user-service/.env.example
+++ b/apps/user-service/.env.example
@@ -7,8 +7,8 @@ DB_NAME="task-management"
 
 FRONTEND_URL="http://localhost:3000"
 
-# mail - Configure your SMTP provider credentials
-MAIL_HOST="your-smtp-host.com"
+# mail
+MAIL_HOST="smtp.ethereal.email"
 MAIL_PORT=587
-MAIL_USER="your-email@example.com"
-MAIL_PASS="your-email-password"
+MAIL_USER="dustin.bechtelar21@ethereal.email"
+MAIL_PASS="aX8cue9qqNDsBNxyyv"
