--- a/.github/workflows/weekly-version-bump.yml
+++ b/.github/workflows/weekly-version-bump.yml
@@ -33,14 +33,31 @@ jobs:
         env:
           CI: true
 
+      # pnpm up --latest -r
+      - name: Update dependencies
+        run: pnpm up --latest -r && pnpm install
+
+      - name: Check for changes
+        id: changes
+        run: |
+          if git diff --quiet; then
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+            echo "No changes detected after dependency updates"
+          else
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+            echo "Changes detected after dependency updates"
+          fi
+
       - name: Bump versions
+        if: steps.changes.outputs.has_changes == 'true'
         run: pnpm version patch -r --no-git-tag-version
 
       - name: Create pull request
+        if: steps.changes.outputs.has_changes == 'true'
         uses: peter-evans/create-pull-request@v6
         with:
-          commit-message: "chore: weekly version bump"
+          commit-message: 'chore: weekly version bump and dependency updates'
           branch: chore/weekly-version-bump
-          title: "chore: weekly version bump"
-          body: "## Summary\n- Weekly version bump"
+          title: 'chore: weekly version bump and dependency updates'
+          body: "## Summary\n- Weekly version bump\n- Updated dependencies to latest versions"
           base: main
