--- a/apps/notification-service/package.json
+++ b/apps/notification-service/package.json
@@ -52,7 +52,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.40.0",
+    "@task-mgmt/eslint-config": "workspace:*"
   },
   "jest": {
     "moduleFileExtensions": [
