--- a/apps/project-service/package.json
+++ b/apps/project-service/package.json
@@ -25,7 +25,7 @@
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "@task-mgmt/database": "workspace:*",
-    "drizzle-orm": "^0.44.4",
+    "drizzle-orm": "^0.44.5",
     "neverthrow": "^8.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
@@ -36,6 +36,7 @@
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
+    "@task-mgmt/eslint-config": "workspace:*",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
@@ -53,8 +54,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0",
-    "@task-mgmt/eslint-config": "workspace:*"
+    "typescript-eslint": "^8.41.0"
   },
   "jest": {
     "moduleFileExtensions": [
