--- a/apps/token-service/package.json
+++ b/apps/token-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@task-mgmt/auth-service",
+  "name": "@task-mgmt/token-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -30,7 +30,7 @@
     "@task-mgmt/shared-config": "workspace:*",
     "@task-mgmt/shared-types": "workspace:*",
     "@types/jsonwebtoken": "^9.0.10",
-    "drizzle-orm": "^0.44.4",
+    "drizzle-orm": "^0.44.5",
     "jsonwebtoken": "^9.0.2",
     "neverthrow": "^8.2.0",
     "reflect-metadata": "^0.2.2",
@@ -42,6 +42,7 @@
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
+    "@task-mgmt/eslint-config": "workspace:*",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
@@ -59,8 +60,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0",
-    "@task-mgmt/eslint-config": "workspace:*"
+    "typescript-eslint": "^8.41.0"
   },
   "jest": {
     "moduleFileExtensions": [
