feat: add shared-utils package for password validation and email templates; update user service to utilize new email templates for verification and password reset

--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -29,6 +29,7 @@
     "@task-mgmt/database": "workspace:*",
     "@task-mgmt/mail": "workspace:*",
     "@task-mgmt/shared-config": "workspace:*",
+    "@task-mgmt/shared-utils": "workspace:*",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
