--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -27,7 +27,7 @@
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "@task-mgmt/database": "workspace:*",
-    "@task-mgmt/mail": "workspace:*",
+    "@task-mgmt/queue": "workspace:*",
     "@task-mgmt/shared-config": "workspace:*",
     "@task-mgmt/shared-utils": "workspace:*",
     "@types/bcrypt": "^6.0.0",
