--- a/apps/email-worker/package.json
+++ b/apps/email-worker/package.json
@@ -21,12 +21,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@task-mgmt/mail": "workspace:*",
     "@task-mgmt/queue": "workspace:*",
-    "bullmq": "^4.15.0",
+    "bullmq": "^5.58.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
