--- a/packages/queue/package.json
+++ b/packages/queue/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
-    "bullmq": "^4.15.0",
+    "bullmq": "^5.58.5",
     "ioredis": "^5.3.2"
   },
   "devDependencies": {
+    "@task-mgmt/eslint-config": "workspace:*",
     "@types/node": "^24.3.1",
+    "eslint": "^9.35.0",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
