--- a/apps/email-worker/Dockerfile
+++ b/apps/email-worker/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:18-alpine
+FROM node:22-alpine
 
 WORKDIR /app
 
-# Install pnpm
-RUN npm install -g pnpm
+# Enable Corepack-managed package managers
+RUN corepack enable && corepack prepare pnpm@latest --activate
 
 # Copy package files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
@@ -11,7 +11,7 @@ COPY apps/email-worker/package.json ./apps/email-worker/
 COPY packages/queue/package.json ./packages/queue/
 COPY packages/mail/package.json ./packages/mail/
 
-# Install dependencies
+# Install dependencies (frozen)
 RUN pnpm install --frozen-lockfile
 
 # Copy source code
@@ -24,8 +24,7 @@ RUN cd packages/mail && pnpm build
 # Build the email worker
 RUN cd apps/email-worker && pnpm build
 
-# Expose port (though worker doesn't serve HTTP)
-EXPOSE 3000
+# No ports exposed; worker runs headless
 
 # Start the email worker
 CMD ["node", "apps/email-worker/dist/main.js"]
