feat: add roles decorator and user role management, update dependencies

--- a/apps/user-service/.env.example
+++ b/apps/user-service/.env.example
@@ -10,5 +10,5 @@ FRONTEND_URL="http://localhost:3000"
 # mail
 MAIL_HOST="smtp.ethereal.email"
 MAIL_PORT=587
-MAIL_USER="dustin.bechtelar21@ethereal.email"
-MAIL_PASS="aX8cue9qqNDsBNxyyv"
+MAIL_USER=""
+MAIL_PASS=""
