--- a/apps/email-worker/package.json
+++ b/apps/email-worker/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "@task-mgmt/mail": "workspace:*",
