feat(database): add email verification tokens and user notifications schema
- Added new table `email_verification_tokens` with necessary fields and constraints.
- Updated `users` table schema to include new fields.
- Introduced `notifications` table for user notifications with foreign key relationships.
- Enhanced `projects` and `tasks` schemas with new roles and relationships.
- Improved logging in `database.service.ts` for better connection feedback.
- Updated ESLint configuration for consistency.
- Added new project service port in shared config.
- Updated pnpm lock file to include new dependencies.
- Increased concurrency in turbo configuration for improved performance.

--- a/apps/project-service/package.json
+++ b/apps/project-service/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
+    "dev": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -21,10 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "@task-mgmt/database": "workspace:*",
+    "@task-mgmt/shared-config": "workspace:*",
+    "@task-mgmt/shared-types": "workspace:*",
+    "@task-mgmt/shared-utils": "workspace:*",
     "drizzle-orm": "^0.44.5",
     "neverthrow": "^8.2.0",
     "reflect-metadata": "^0.2.2",
