feat(queue): integrate BullMQ for job management and add stress test queue
- Added '@task-mgmt/queue' package to the workspace.
- Introduced BullMQ for managing email and stress test queues in the QueueModule.
- Updated QueueService to utilize BullMQ for job handling, including adding a new method for stress test jobs.
- Updated dependencies to include '@nestjs/bullmq' and '@nestjs/bullmq' version 11.0.3.

--- a/packages/queue/package.json
+++ b/packages/queue/package.json
@@ -19,6 +19,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.1.6",
     "bullmq": "^5.58.9",
     "ioredis": "^5.8.0"
