--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -32,6 +32,7 @@
     "@task-mgmt/shared-config": "workspace:*",
     "@task-mgmt/shared-types": "workspace:*",
     "@task-mgmt/shared-utils": "workspace:*",
+    "@task-mgmt/queue": "workspace:*",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "drizzle-orm": "^0.44.5",
