chore(package): update package.json for shared-types and shared-utils
- Removed 'main' and 'types' fields from package.json.
- Added 'exports' field to specify entry point for both shared-types and shared-utils packages.
- Cleaned up build and dev scripts to streamline package management.

--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -2,11 +2,7 @@
   "name": "@task-mgmt/shared-types",
   "version": "0.0.0",
   "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
     "lint": "eslint src --ext .ts",
     "test": "jest"
   },
@@ -20,5 +16,8 @@
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1"
+  },
+  "exports": {
+    ".": "./src/index.ts"
   }
 }
