feat(invitation): implement project invitation functionality
- Added `SendInvitationDto` for structured input when sending project invitations.
- Introduced `sendInvitation` method in `ProjectMembersController` to handle invitation requests.
- Implemented invitation handling in `AppService`, including user creation for new invitees and sending welcome emails.
- Updated email templates to include a welcome invitation format.
- Integrated queue service for email job processing related to invitations.
- Enhanced user service to create new users via invitation with email verification.

--- a/apps/project-service/package.json
+++ b/apps/project-service/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "@task-mgmt/database": "workspace:*",
+    "@task-mgmt/queue": "workspace:*",
     "@task-mgmt/shared-config": "workspace:*",
     "@task-mgmt/shared-types": "workspace:*",
     "@task-mgmt/shared-utils": "workspace:*",
