--- a/apps/webapp/.env.example
+++ b/apps/webapp/.env.example
@@ -15,6 +15,5 @@
 # https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET=""
 
-# Next Auth Discord Provider
-AUTH_DISCORD_ID=""
-AUTH_DISCORD_SECRET=""
+# API Gateway
+API_GATEWAY_URL="http://localhost:3000"
